# 6502

./: .gitignore  .gitmodules  CLAUDE.md  README.md  binary_format.md  protocol-design-notes.md  protocol.md
CPLD/: 6502_mcu_interface_spec.md  README.md  chipsel.pld  control.pld  mcu_interface.pld  mcu_interface.si
CPLD/fpga/: mcu_interface.xdc  mcu_interface_integrated.v  mcu_interface_integrated.xdc  mcu_interface_integrated_tb.v  mcu_interface_tb.v
TaliForth2/: .gitignore  .gitrepo  Makefile  definitions.asm  stringtable.asm  taliforth.asm
TaliForth2/docs/: README.md  WORDLIST.md  ch_assembler.adoc  ch_developing.adoc  ch_editor_ed.adoc  ch_glossary.adoc  ch_installing.adoc  ch_internals.adoc  ch_overview.adoc  ch_running.adoc  ch_tutorial_blocks.adoc  ch_tutorial_hardware.adoc  manual.adoc  manual.html  manual.md
TaliForth2/docs/pics/: Makefile  header_detail.txt  header_simple.txt  status_flags.txt
TaliForth2/examples/: README.md
TaliForth2/examples/forth/: mandelbrot.fs  roman.fs  simple.fs  word_sizes.fs
TaliForth2/examples/words/: bind.asm  block-ext.asm  byte.asm  core-ext.asm  dasm.asm  hash.asm  rand.asm  srecord.asm  string-ext.asm
TaliForth2/platform/: README.md
TaliForth2/platform/apple1-ram/: platform.asm
TaliForth2/platform/apple1-rom/: platform.asm
TaliForth2/platform/c65/: platform.asm
TaliForth2/platform/kowalski/: platform.asm
TaliForth2/platform/mattbrew/: platform.asm  platform_forth.fs
TaliForth2/platform/minimal/: platform.asm
TaliForth2/platform/neo6502/: platform.asm
TaliForth2/platform/py65mon/: platform.asm
TaliForth2/platform/sbc/: platform.asm
TaliForth2/platform/skeleton/: platform.asm  platform_forth.fs  platform_words.asm
TaliForth2/platform/sorbus/: platform.asm
TaliForth2/platform/steckschwein/: platform.asm
TaliForth2/tests/: README.md  asm.fs  benchmarks.fs  core_b.fs  core_c.fs  cycles.fs  results.txt  search.fs  tali.fs  talitest_c65.py  tester.fs  tools.fs  user.fs
TaliForth2/tools/: README.md  forth_pack.py  generate_wordlist.py  sort_vice_labels.py  test_forth_pack.py
TaliForth2/words/: all.asm  assembler.asm  block.asm  compile.asm  core.asm  disasm.asm  double.asm  ed.asm  editor.asm  headers.asm  literals.asm  string.asm  tali.asm  tools.asm  wordlist.asm
binpack/: .gitignore  Cargo.toml
binpack/src/: main.rs
blinkenlights/: .gitignore  Makefile  bootloader.cpp  echo.cpp  hello.cpp  ramtest.cpp  read_write_test.cpp
blinkenlights/asm/: CONFIG.cfg  CONFIG_newmap.cfg  README.md  hello.s  hello_newmap.s  ramtest.s  rpitest.s  rpitest_slow.s  segments.s  test.s
bridge/: CMakeLists.txt  bridge_defs.h  bus_interface.c  bus_interface.h  bus_interface.pio  main.c  spi_slave.c  spi_slave.h
emu/: .gitignore  eslint.config.js  package-lock.json  package.json
emu/emu-core/: Cargo.toml
emu/emu-core/src/: bus.rs  disassemble.rs  lib.rs  test_harness.rs  tests.rs  via.rs
emu/src/: App.css  App.tsx  peripherals.ts  vremulcd.d.ts
freq_counter/: CMakeLists.txt  README.md  main.c
inform/: .gitignore  Makefile
inform/zifmia/: .gitrepo
keyboard_mcu/: CMakeLists.txt  README.md  hid_app.c  main.c  pico_status_led.md  tusb_config.h  via_interface.c  via_interface.h
llvm-mos-sdk/: .gitignore  .gitrepo
llvm-mos-sdk/examples/: CMakeLists.txt
llvm-mos-sdk/examples/mattbrew/: hello-lcd.c
llvm-mos-sdk/mos-platform/: CMakeLists.txt
llvm-mos-sdk/mos-platform/mattbrew/: CMakeLists.txt  clang.cfg  getchar.c  io.c  lcd.c  link.ld  mattbrew.h  putchar.c
llvm-mos-sdk/mos-platform/mattbrew/crt0/: reset.S  systick.S
mcu_interface/: README.md  protocol.md
mcu_interface/FPGA/: mcu_interface.v
mcu_interface/FPGA_integrated/: mcu_interface_integrated.xdc  mcu_interface_integrated_tb.v
pico_zero_interface/: README.md
pico_zero_interface/pico/: CMakeLists.txt  main.c  spi_slave.c  spi_slave.h
pico_zero_interface/zero/: bridge_terminal.py  pyproject.toml  spi_master.py  test_read_blast.py  test_spi.py  test_stress.py  test_write_blast.py
pio_bus_interface/: .gitignore  CMakeLists.txt  README.md  bus_interface.c  bus_interface.h  bus_interface.pio  bus_interface_rx_only.c  bus_interface_rx_only.h  bus_interface_rx_only.pio  main.c  main_rx_only.c  main_rx_only_dma.c  minimal_phi2_test.c
shein/: Cargo.toml  README.md
shein/src/: main.rs  spi_master.rs  terminal.rs  ui.rs
