[package]
name = "emu-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mos6502 = "0.9.0"
vr-emu-lcd = { git = "https://github.com/MattX/vrEmuLcd", branch = "rust" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
